--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <input type="text" name="query" autofocus>
     </form>
     <div id="results"></div>
+    <button id="settings">Settings</button>
   </body>
 
   <template>
