--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       autofocus>
     <ul id="results" onclick="open_selection()" class="rounded"></ul>
     <a id="settings" href="settings.html">
-      <object type="image/svg+xml" data="content/gear.svg"></object>
+      <object type="image/svg+xml" data="assets/gear.svg"></object>
     </a>
   </body>
 
