--- a/src/settings.html
+++ b/src/settings.html
@@ -19,7 +19,7 @@
 		<li>
 			<input type="text" name="directory" class="primary_text">
 			<button class="removed remove_button right">
-				<object type="image/svg+xml" data="content/x.svg"></object>
+				<object type="image/svg+xml" data="assets/x.svg"></object>
 			</button>
 		</li>	
 	</template>
