Moved settings offscreen.

--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,14 @@
         </button>
       </section>
 
-      <!-- <section id="settings"> -->
-        <!-- <ul id="dir_list"> -->
+      <section id="settings">
+        <ul id="dir_list">
           <!-- Add directories by script in Settings class -->
-        <!-- </ul> -->
-        <!-- <button id="save_button" class="normal_button">Save</button> -->
-        <!-- <button id="cancel_button" class="normal_button">Cancel</button> -->
-        <!-- <button id="add_button" class="normal_button">Add</button> -->
-      <!-- </section> -->
+        </ul>
+        <button id="save_button" class="normal_button">Save</button>
+        <button id="cancel_button" class="normal_button">Cancel</button>
+        <button id="add_button" class="normal_button">Add</button>
+      </section>
     </main>
   </body>
 
