--- a/src/index.html
+++ b/src/index.html
@@ -11,21 +11,30 @@
     <main>
       <section id="search">
         <input type="text" id="query" autofocus>
-        <ul id="results">
-          <!-- Add results by script in Search class -->
-        </ul>
-        <button id="settings_button">
-          <object type="image/svg+xml" data="assets/gear.svg"></object>
-        </button>
+        <div class="results_center_container">
+          <div class="size_settings_button"></div>
+          <ul id="results">
+            <!-- Add results by script in Search class -->
+          </ul>
+          <div class="settings_button_container">
+            <button id="settings_button">
+              <object type="image/svg+xml" data="assets/gear.svg"></object>
+            </button>         
+          </div>
+        </div>
       </section>
 
       <section id="settings">
-        <ul id="dir_list">
+        <ul id="settings_list">
           <!-- Add directories by script in Settings class -->
         </ul>
-        <button id="save_button" class="normal_button">Save</button>
-        <button id="cancel_button" class="normal_button">Cancel</button>
-        <button id="add_button" class="normal_button">Add</button>
+        <div class="settings_buttons_container">
+          <button id="add_button" class="normal_button">Add</button>
+          <div class="align_right">
+            <button id="cancel_button" class="normal_button">Cancel</button>
+            <button id="save_button" class="normal_button">Save</button>
+          </div>
+        </div>
       </section>
     </main>
   </body>
@@ -38,9 +47,9 @@
   </template>
 
   <template id="setting_template">
-    <li>
-      <input type="text" name="directory" class="primary_text">
-      <button class="removed remove_button right">
+    <li class="setting">
+      <input type="text" name="directory" class="setting_input">
+      <button class="remove_button">
         <object type="image/svg+xml" data="assets/x.svg"></object>
       </button>
     </li> 
