Slight styles optimization.

--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,12 @@
       <section id="search">
         <input type="text" id="query" autofocus>
         <div class="results_center_container">
-          <div class="size_settings_button"></div>
           <ul id="results">
             <!-- Add results by script in Search class -->
           </ul>
-          <div class="settings_button_container">
-            <button id="settings_button">
-              <object type="image/svg+xml" data="assets/gear.svg"></object>
-            </button>         
-          </div>
+          <button id="settings_gear">
+            <object type="image/svg+xml" data="assets/gear.svg"></object>
+          </button>         
         </div>
       </section>
 
