Breaking out modules.

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,9 @@
   <template id="setting_template">
     <li class="setting">
       <input type="text" name="directory" class="setting_input">
+      <button class="browse_button">
+        <object data="assets/folder.svg" type="image/svg+xml"></object>
+      </button>
       <button class="remove_button">
         <object type="image/svg+xml" data="assets/x.svg"></object>
       </button>
